--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,34 +1,47 @@
 <nav class="navbar">
-  <div class="navbar-brand-container">
-    <a class="navbar-brand" href="#">
-      <picture>
-        <!-- <source media="(max-width: 600px)" srcset="assets/img/logo_blanco_small.png"> -->
-        <img src="assets/img/logo_blanco.png" class="logo" alt="Logo de Mi Aplicación">
-      </picture>
+  <div class="navbar-container">
+    <a routerLink="/" class="navbar-logo">
+      <img src="../../assets/img/logo_blanco.png" alt="Logo Tu Evento">
     </a>
-  </div>
-  <button class="menu-toggle">
-    <span></span>
-    <span></span>
-    <span></span>
-  </button>
-  <div class="navbar-links">
-    <a href="#about">Nosotros</a>
-    <a href="#galeria">Galeria</a>
-    <a href="#extras">Extras</a>
-    <a href="servicios.html" id="servicios" *ngIf="user$ | async">Servicios</a>
-    <a href="#contact">Contacto</a>
-    <a class="nav-link carrito-nav-link" id="carrito-nav" href="paginas/carrito.html" *ngIf="user$ | async">
-      <img src="assets/img/icons/025-cart.png"   alt="Carrito" class="carrito-icono-navbar">
-      <span id="carrito-cantidad-navbar">0</span>
-    </a>
-  </div>
-  <div class="navbar-auth" id="navbar-auth">
-    <ng-container *ngIf="user$ | async as user">
-      <span class="bienvenido" *ngIf="user">Bienvenido: {{ user?.email }}</span>
-      <button (click)="logout()" class="boton">Cerrar Sesión</button>
-    </ng-container>
-    <button *ngIf="!(user$ | async)" data-bs-toggle="modal" data-bs-target="#authModal" class="boton">Login</button>
-
+    <div class="navbar-toggle" (click)="toggleMenu()">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+    <div class="navbar-menu" [ngClass]="{ 'active': isMenuOpen }">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a routerLink="/" class="nav-link" (click)="closeMenu()">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/cumpleanos" class="nav-link" (click)="closeMenu()">Cumpleaños</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/casamientos" class="nav-link" (click)="closeMenu()">Casamientos</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/extras" class="nav-link" (click)="closeMenu()">Extras</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/contacto" class="nav-link" (click)="closeMenu()">Contacto</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/nosotros" class="nav-link" (click)="closeMenu()">Nosotros</a>
+        </li>
+      </ul>
+      <div class="navbar-auth">
+        <ng-container *ngIf="!isLoggedIn">
+          <button class="auth-button login-button" (click)="loginModal.openModal()">Iniciar Sesión</button>
+          <button class="auth-button register-button" (click)="registerModal.openModal()">Registrarse</button>
+        </ng-container>
+        <ng-container *ngIf="isLoggedIn && loggedInUser">
+          <span class="me-2">Bienvenido, {{ loggedInUser.username }}</span>
+          <button class="auth-button logout-button" (click)="logout()">Cerrar Sesión</button>
+        </ng-container>
+      </div>
+    </div>
   </div>
 </nav>
+
+<app-login-modal #loginModal (closeModalEvent)="closeLoginModal()" (loginSuccess)="handleLoginSuccess($event)"></app-login-modal>
+<app-register-modal #registerModal (closeModalEvent)="closeRegisterModal()" (registerSuccess)="handleRegisterSuccess($event)"></app-register-modal>
