--- a/src/app/paginas/cumpleanos/cumpleanos.component.html
+++ b/src/app/paginas/cumpleanos/cumpleanos.component.html
@@ -1,5 +1,53 @@
-<app-navbar></app-navbar>
+<section class="birthday-service-card mb-4">
+  <div class="carousel-container">
+    <div id="decoracionCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://scontent.fmvd1-1.fna.fbcdn.net/v/t39.30808-6/471170623_3971353079858475_1786211510350155585_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=3a1ebe&_nc_ohc=hT_P8Z21Ta8Q7kNvwGA_1cm&_nc_oc=AdlDNg_DvjcR-BoDfqHz5hDZ8JJlDm5cQJz9QWmovBPXTKquC7muh9BNLjMaYqI5OKuoR_QeR1W7w7DGwcqWDzip&_nc_zt=23&_nc_ht=scontent.fmvd1-1.fna&_nc_gid=MPvPYJyzYpv8Dy8dYBqmkA&oh=00_AfE577-lyNxjPo5NGvHGSj2KBtXxytJl4Bh9uhNAB5t3Ow&oe=68192401" class="d-block w-100 service-image" alt="Decoración de Cumpleaños 1">
+        </div>
+        <div class="carousel-item">
+          <img src="https://scontent.fmvd2-2.fna.fbcdn.net/v/t1.6435-9/118933505_2726198024373993_3962559688399217289_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=3a1ebe&_nc_ohc=G8nlxSqC9o8Q7kNvwGAg5JN&_nc_oc=AdnGdHjiShGyWHf6kegty8KGuSbyzi9g1ZTbEwZodrSjgt4YM2cndPzvaSU9u4fjpcpcNLM5vnbbVeKry4daXB2j&_nc_zt=23&_nc_ht=scontent.fmvd2-2.fna&_nc_gid=HElF8I1xCoknxIQvdpgPGA&oh=00_AfHaUXQj5AdLfRONvgXXhQviCraExA-cgU_M7NPubpJUgw&oe=683AA2B7" class="d-block w-100 service-image" alt="Decoración de Cumpleaños 2">
+        </div>
+        <div class="carousel-item">
+          <img src="https://media.istockphoto.com/id/1482265626/es/foto/ni%C3%B1a-de-15-a%C3%B1os-ni%C3%B1a-hermosa-cumplea%C3%B1os.jpg?s=612x612&w=0&k=20&c=XrmHNY7HONqGaq0hnoC1AZ2jJQY1NgSdzuIVNlaakoQ=" class="d-block w-100 service-image" alt="Decoración de Cumpleaños 3">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#decoracionCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#decoracionCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </div>
+    <div class="service-info">
+      <h2 class="service-title">Captura los Recuerdos de tu Cumpleaños</h2>
+      <p>Revive cada sonrisa, cada sorpresa y cada momento especial de tu cumpleaños con nuestros servicios profesionales de fotografía y video. Desde la llegada de los invitados hasta el corte de la torta y la diversión en la pista, capturamos la esencia de tu celebración para que los recuerdos perduren para siempre.</p>
+      <p class="service-price">Fotografía desde: <span class="highlight">$4.000</span></p>
+      <p class="service-price">Video desde: <span class="highlight">$4.500</span></p>
+      <p class="service-price">Paquete Foto + Video desde: <span class="highlight">$7.500</span></p>
+      <button class="btn btn-outline-primary btn-sm" (click)="toggleDetails('fotoVideoDetails')">Ver detalles de Foto y Video</button>
+    </div>
+  </div>
+</section>
 
-
-
-
+<div id="fotoVideoDetails" class="service-details" *ngIf="isFotoVideoDetailsVisible">
+  <h3>Detalles de Fotografía y Video para Cumpleaños</h3>
+  <p>Nuestro equipo de fotógrafos y videógrafos expertos se encargará de documentar cada detalle de tu fiesta de cumpleaños de manera creativa y profesional.</p>
+  <h4>Fotografía:</h4>
+  <ul>
+    <li>Cobertura completa del evento</li>
+    <li>Sesiones de fotos espontáneas y grupales</li>
+    <li>Entrega de fotografías editadas en alta resolución</li>
+    <li>Opciones de álbumes personalizados y copias impresas</li>
+  </ul>
+  <h4>Video:</h4>
+  <ul>
+    <li>Grabación profesional con cámaras de alta definición</li>
+    <li>Edición de video con música, efectos y momentos destacados</li>
+    <li>Opciones de video resumen y video completo del evento</li>
+    <li>Entrega en formato digital para compartir fácilmente</li>
+  </ul>
+  <p>¡Consúltanos por nuestros paquetes personalizados que se adaptan a tus necesidades y presupuesto!</p>
+</div>
