--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -6,10 +6,11 @@
         <button type="button" class="btn-close" (click)="closeModal()" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
         <form (ngSubmit)="login()">
           <div class="mb-3">
             <label for="username" class="form-label">Usuario</label>
-            <input type="text" class="form-control" id="username" name="username" [(ngModel)]="credentials.username" required>
+            <input type="text" class="form-control" id="username" name="username" [(ngModel)]="credentials.email" required>
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
