--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<!-- <app-navbar></app-navbar>
-<app-auth-modal></app-auth-modal>
-
-<router-outlet></router-outlet> -->
 
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<app-auth-modal *ngIf="!isLoggedIn"></app-auth-modal> ```
+<app-auth-modal *ngIf="!isLoggedIn"></app-auth-modal>
 
