--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.navbar {
+nav {
   background: #D8D0C5;
   background: radial-gradient(circle, rgb(138, 126, 110) 0%, rgb(126, 98, 51) 50%, rgba(63, 54, 36, 1) 100%);
   color: #fdfdfd;
@@ -6,131 +6,86 @@
   top: 0;
   z-index: 1000;
 }
-
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-  max-width: 1200px;
-  margin: 0 auto;
+a {
+  text-decoration: none;
+  color: #ffffff;
+  font: 1.1em/1 'Oswald', sans-serif;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  transition: color 0.3s, text-shadow 0.3s;
 }
-
-.navbar-logo img {
-  height: 40px !important; /* Ajusta el tamaño del logo */
+a:hover {
+  color: #e8be95;
+  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.7);
 }
-
-.navbar-toggle {
-  display: none; /* Oculto en escritorio */
-  cursor: pointer;
-}
-
-.bar {
-  width: 25px;
-  height: 3px;
-  background-color: #333;
-  margin: 5px auto;
-  transition: all 0.3s ease-in-out;
-}
-
-.navbar-menu {
-  display: flex; /* Mantiene la disposición en fila para escritorio */
-  align-items: center; /* Alinea verticalmente los elementos en escritorio */
-}
-
-.navbar-nav {
+ul {
   list-style: none;
+  width: 100%;
   display: flex; /* Ya deberías tener esto */
   flex-direction: row; /* Ya deberías tener esto */
   align-items: center; /* Añade esta línea para la alineación vertical */
   margin: 0;
   padding: 0;
 }
+li { margin-left: 20px; }
 
-.nav-item {
-  margin-left: 20px; /* Espacio entre los links en escritorio */
+.welcome{
+  font-family: "Chewy", system-ui;
+  font-weight: 400;
+  color: blanchedalmond;
+  font-style: normal;
+  font-size: 1.2em;
+  transition: color 0.3s, text-shadow 0.3s;
+  text-shadow: 3px 3px 10px rgb(3, 3, 3);
 }
-
-.nav-link {
-  text-decoration: none;
-  color: #ffffff;
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-
-.nav-link:hover {
-  color: #007bff; /* Un color de acento */
-}
-
-.navbar-auth {
-  display: flex; /* Mantiene la disposición en fila horizontal para escritorio */
-  margin-left: 20px; /* Espacio entre los botones en escritorio */
-}
-
 .auth-button {
-  background: none;
-  border: 1px solid #333;
-  color: #333;
-  padding: 8px 15px;
-  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  border-radius: 0.3rem;
+  background: #e8be95;
+  background: linear-gradient(90deg, rgba(232, 190, 149, 1) 0%, rgb(250, 250, 250) 35%, rgba(242, 242, 242, 1) 100%);
+  border: none;
+  color: #584c30;
   cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  margin-left: 10px; /* Espacio entre los botones en escritorio */
+  transition: background-color 0.3s, color 0.3s, border 0.3s, text-shadow 0.3s;
+  font: 0.9em/1 'Oswald', sans-serif;
+  text-transform: uppercase;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+.auth-button:hover {
+  background: #d1ccb4;
+  background: linear-gradient(90deg, rgba(209, 204, 180, 1) 0%, rgba(160, 129, 75, 1) 50%, rgba(63, 54, 36, 1) 100%);
+  color: #fdfdfd;
+  border: #141414 1px solid;
+  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.7);
 }
 
-.auth-button:hover {
-  background-color: #007bff;
-  color: #fff;
-  border-color: #007bff;
-}
+
+
 
 @media screen and (max-width: 820px) {
-  .navbar-menu {
-    position: absolute;
-    top: 60px; /* Ajusta según la altura de tu navbar */
-    left: 0;
-    width: 100%;
-    background-color: #f8f9fa; /* O el color de fondo de tu menú móvil */
-    display: flex;
-    align-items: center;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease-in-out;
-    flex-direction: column; /* Apila los elementos verticalmente */
-    z-index: 10; /* Asegura que esté por encima de otros elementos */
-  }
-
-  .navbar-menu.active {
-    transform: translateX(0%);
-  }
-
-  .navbar-nav {
+  ul {
     display: flex;
     flex-direction: column; /* Apila los items de la lista verticalmente */
     width: 100%;
     padding: 20px 0;
     align-items: center; /* Centra los items horizontalmente */
   }
-
-  .nav-item {
+  li {
     margin: 10px 0;
     width: 100%;
     text-align: center;
   }
-
-  .nav-link {
+  a {
     display: block;
     padding: 10px 0;
     color: #333; /* O el color de tus enlaces */
     text-decoration: none;
   }
-
-  .mobile-welcome {
+  .welcome {
     display: block;
     width: 100%;
     text-align: center;
-    margin-bottom: 10px;
-    color: #333; /* O el color del texto de bienvenida */
-    font-weight: bold; /* O el estilo que prefieras */
+    margin: 0px;
   }
 
   .auth-button {
@@ -138,27 +93,23 @@
     width: calc(100% - 40px); /* Ancho con márgenes */
     margin: 10px 20px;
     text-align: center;
-    /* Los estilos base del botón ya están definidos fuera de la media query */
   }
-
   .logout-button {
-    /* Puedes añadir estilos específicos para el botón de cerrar sesión si lo deseas */
-    background-color: #dc3545; /* Ejemplo de color rojo para cerrar sesión */
-    color: white;
-    border-color: #dc3545;
+    color: rgb(219, 134, 36);
+    border-color: #151a27;
   }
 }
 
 
-/* Animación del menú hamburguesa */
-.navbar-toggle.active .bar:nth-child(1) {
-  transform: rotate(-45deg) translate(-6px, 6px);
-}
+@media screen and (min-width: 820px) and (max-width: 1240px) {
+.grupo_btn{
+   display: flex;
+   position: sticky;
+    flex-direction: column; /* Mantiene la disposición horizontal */
+    flex-wrap: wrap; /* Permite que los elementos se envuelvan a la siguiente línea */
 
-.navbar-toggle.active .bar:nth-child(2) {
-  opacity: 0;
-}
+  }
 
-.navbar-toggle.active .bar:nth-child(3) {
-  transform: rotate(45deg) translate(-6px, -6px);
+
+
 }
