--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,42 +1,37 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" routerLink="/">
-    <img src="assets/img/logo_blanco.png" width="200" class="logo" alt="Logo de Mi Aplicación">
+    <img src="assets/img/logo_blanco.png" width="200" class="logo" alt="logo de mi app">
   </a>
-  <button class="navbar-toggler" type="button" (click)="toggleMenu()" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button"
+          (click)="toggleMenu()" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav" [ngClass]="{'show': isMenuOpen}">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/" (click)="closeMenu()">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/cumpleanos" (click)="closeMenu()">Cumpleaños</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/casamientos" (click)="closeMenu()">Casamientos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/extras" (click)="closeMenu()">Extras</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/contacto" (click)="closeMenu()">Contacto</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/nosotros" (click)="closeMenu()">Nosotros</a>
-      </li>
-      <li class="nav-item" *ngIf="loggedInUserEmail">
-        <span class="navbar-text mobile-welcome">Bienvenido: {{ loggedInUserEmail }}</span>
-      </li>
-      <li class="nav-item" *ngIf="loggedInUserEmail">
-        <button class="btn btn-outline-danger my-2 my-sm-0 auth-button logout-button" (click)="logout()">Cerrar Sesión</button>
-      </li>
-      <li class="nav-item" *ngIf="!loggedInUserEmail">
-        <button class="btn btn-outline-success my-2 my-sm-0 auth-button" (click)="openLoginModal()">Iniciar Sesión</button>
-      </li>
-      <li class="nav-item" *ngIf="!loggedInUserEmail">
-        <button class="btn btn-outline-primary my-2 my-sm-0 ml-2 auth-button" (click)="openRegisterModal()">Registrarse</button>
-      </li>
+    <ul>
+      <li><a routerLink="/" (click)="closeMenu()">Inicio</a></li>
+      <li><a routerLink="/cumpleanos" (click)="closeMenu()">Cumpleaños</a></li>
+      <li><a routerLink="/casamientos" (click)="closeMenu()">Casamientos</a></li>
+      <li><a routerLink="/extras" (click)="closeMenu()">Extras</a></li>
+      <li><a routerLink="/contacto" (click)="closeMenu()">Contacto</a></li>
+
+      <li><a routerLink="/nosotros" (click)="closeMenu()">Nosotros</a></li>
+
+      <ul class="grupo_btn">
+        <li  *ngIf="loggedIn" class="botones">
+          <span class="welcome">Bienvenido: {{ loggedIn }}</span>
+        </li>
+        <li  *ngIf="loggedIn" class="botones">
+          <button class=" auth-button logout-button" (click)="logout()">Cerrar Sesión</button>
+        </li>
+        <li  *ngIf="!loggedIn" class="botones">
+          <button class="auth-button" (click)="openLoginModal()">Iniciar Sesión</button>
+        </li>
+        <li  *ngIf="!loggedIn" class="botones">
+          <button class="auth-button" (click)="openRegisterModal()">Registrarse</button>
+        </li>
+      </ul>
+
     </ul>
   </div>
   <app-login-modal #loginModal (loginSuccess)="handleLoginSuccess($event)" (closeModalEvent)="closeLoginModal()"></app-login-modal>
