--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" routerLink="/">
-    <img src="assets/img/logo_blanco.png" width="200" class="logo" alt="logo de mi app">
+    <img src="assets/img/logo_blanco_pequeño.png" width="200" class="logo" alt="logo de mi app">
   </a>
   <button class="navbar-toggler" type="button"
           (click)="toggleMenu()" aria-controls="navbarNav"
