--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,8 +14,8 @@
       <li><a routerLink="/casamientos" (click)="closeMenu()">Casamientos</a></li>
       <li><a routerLink="/extras" (click)="closeMenu()">Extras</a></li>
       <li><a routerLink="/contacto" (click)="closeMenu()">Contacto</a></li>
-
-      <li><a routerLink="/nosotros" (click)="closeMenu()">Nosotros</a></li>
+      <li *ngIf="isLoggedIn"><a routerLink="/servicios" (click)="closeMenu()">Servicios</a></li>
+      <!-- <li><a routerLink="/servicios" (click)="closeMenu()">Servicios</a></li> -->
 
       <ul class="grupo_btn">
         <li  *ngIf="loggedIn" class="botones">
