--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -18,6 +18,10 @@
           </div>
           <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
         </form>
+        <hr>
+        <p class="mt-2">
+          ¿No tienes cuenta? <a href="#" (click)="emitOpenRegisterModal()">Regístrate aquí</a>
+        </p>
       </div>
     </div>
   </div>
