--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -3,14 +3,16 @@
   <h3>Nuestros Servicios</h3>
   <ul class="list-group" id="lista-servicios">
     <li *ngFor="let servicio of servicios$ | async" class="list-group-item">
+
       <input
-        type="checkbox"
-        [value]="servicio.key"
-        class="form-check-input me-2"
-        [id]="'servicio-' + servicio.key"
-        [attr.data-precio]="servicio.precio"
-        (change)="onCheckboxChange(servicio, $event.target)"
-      >
+      type="checkbox"
+      [value]="servicio.key"
+      class="form-check-input me-2"
+      [id]="'servicio-' + servicio.key"
+      [attr.data-precio]="servicio.precio"
+      [checked]="(serviciosSeleccionados | json).includes((servicio.key | json))"
+      (change)="onCheckboxChange(servicio, $event.target)">
+
       <label class="form-check-label" [for]="'servicio-' + servicio.key">
         <img [src]="'assets/'+servicio.imagen" [alt]="servicio.nombre" width="24" height="24" class="me-2">
         {{ servicio.nombre }} - ${{ servicio.precio }}
@@ -19,13 +21,16 @@
   </ul>
 
   <div class="mt-3">
-    <strong>Total: $<span id="total-precio">{{ totalPrecio | number: '1.2-2' }}</span></strong>
+    <strong>Total: $<span id="total-precio">{{ totalPrecio | number: '1.0-0' }}</span></strong>
   </div>
 
   <div class="mt-3">
     <div class="d-flex justify-content-between row col-3">
-      <button id="enviar-carrito" class="btn btn-primary mt-3">Agregar a Carrito</button>
-      <button id="agregar-todo-descuento" class="btn btn-outline-success mt-2 boton-descuento-intermitente">Todo con ➡️ (10% menos)</button>
+      <button (click)="aplicarDescuentoManual()" class="btn btn-outline-success mt-2 boton-descuento-intermitente">Todo por ➡️ (10% menos)</button>
+      <p *ngIf="descuentoAplicado" class="text-success">¡Descuento del 10% aplicado!</p>
+      <button (click)="guardarCarritoEnFirebase()" class="btn btn-primary mt-3">Enviar a Carrito</button>
+      <!-- <button id="enviar-carrito" class="btn btn-primary mt-3">Agregar a Carrito</button>
+      <button id="agregar-todo-descuento" class="btn btn-outline-success mt-2 boton-descuento-intermitente">Todo con ➡️ (10% menos)</button> -->
     </div>
   </div>
 </div>
