--- a/src/app/pago/pago.component.html
+++ b/src/app/pago/pago.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-secondary m-3" routerLink="/carrito"><i class="fa fa-arrow-left"></i></button>
 <div class="container m-5">
   <h3>Pago</h3>
   <p *ngIf="carritoItems.length === 0">No hay items en el carrito para pagar.</p>
@@ -6,5 +7,5 @@
     <div class="cho-container">
       </div>
   </div>
-  <button class="btn btn-secondary mt-3" routerLink="/carrito">Volver al carrito</button>
+
 </div>
