--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         </li>
         <li *ngIf="loggedIn">
           <a routerLink="/carrito" (click)="closeMenu()">
-            <i class="fas fa-shopping-cart"></i>Carrito</a>
+            <i class="fas fa-shopping-cart fa-2x"></i></a>
         </li>
         <li  *ngIf="!loggedIn" class="botones">
           <button class="auth-button" (click)="openLoginModal()">Iniciar Sesión</button>
