--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -1,5 +1,5 @@
 
-<div class="container m-5">
+<div class="container mt-5">
   <h3>Nuestros Servicios</h3>
   <ul class="list-group" id="lista-servicios">
     <li *ngFor="let servicio of servicios$ | async" class="list-group-item">
@@ -11,7 +11,8 @@
       [id]="'servicio-' + servicio.key"
       [attr.data-precio]="servicio.precio"
       [checked]="(serviciosSeleccionados | json).includes((servicio.key | json))"
-      (change)="onCheckboxChange(servicio, $event.target)">
+      (change)="onCheckboxChange(servicio, $event.target)" #servicioCheckbox>
+
 
       <label class="form-check-label" [for]="'servicio-' + servicio.key">
         <img [src]="'assets/'+servicio.imagen" [alt]="servicio.nombre" width="24" height="24" class="me-2">
@@ -26,7 +27,8 @@
 
   <div class="mt-3">
     <div class="d-flex justify-content-between row col-3">
-      <button (click)="aplicarDescuentoManual()" class="btn btn-outline-success mt-2 boton-descuento-intermitente">Todo por ➡️ (10% menos)</button>
+      <!-- <button (click)="aplicarDescuentoManual()" class="btn btn-outline-success mt-2 boton-descuento-intermitente">Todo por ➡️ (10% menos)</button> -->
+      <button (click)="aplicarDescuentoManual()" class="btn btn-outline-success mt-2 boton-descuento-intermitente" [disabled]="descuentoAplicadoBoton">Todo por ➡️ (10% menos)</button>
       <p *ngIf="descuentoAplicado" class="text-success">¡Descuento del 10% aplicado!</p>
       <button (click)="guardarCarritoEnFirebase()" class="btn btn-primary mt-3">Enviar a Carrito</button>
       <!-- <button id="enviar-carrito" class="btn btn-primary mt-3">Agregar a Carrito</button>
