--- a/src/app/pago/pago.component.html
+++ b/src/app/pago/pago.component.html
@@ -4,8 +4,6 @@
   <p *ngIf="carritoItems.length === 0">No hay items en el carrito para pagar.</p>
   <div *ngIf="carritoItems.length > 0">
     <p>Total a pagar: ${{ totalAPagar | number:'1.0-0' }}</p>
-    <div class="cho-container">
-      </div>
+    <div class="cho-container"></div>
   </div>
-
 </div>
