--- a/src/app/paginas/cumpleanos/cumpleanos.component.html
+++ b/src/app/paginas/cumpleanos/cumpleanos.component.html
@@ -3,13 +3,13 @@
     <div id="decoracionCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://scontent.fmvd1-1.fna.fbcdn.net/v/t39.30808-6/471170623_3971353079858475_1786211510350155585_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=3a1ebe&_nc_ohc=hT_P8Z21Ta8Q7kNvwGA_1cm&_nc_oc=AdlDNg_DvjcR-BoDfqHz5hDZ8JJlDm5cQJz9QWmovBPXTKquC7muh9BNLjMaYqI5OKuoR_QeR1W7w7DGwcqWDzip&_nc_zt=23&_nc_ht=scontent.fmvd1-1.fna&_nc_gid=MPvPYJyzYpv8Dy8dYBqmkA&oh=00_AfE577-lyNxjPo5NGvHGSj2KBtXxytJl4Bh9uhNAB5t3Ow&oe=68192401" class="d-block w-100 service-image" alt="Decoración de Cumpleaños 1">
+          <img src="https://hotelcottage.com.uy/images/eventos-cottage-cumple15-2019-054.jpg?crc=314125225" class="d-block w-100 service-image" alt="Decoración de Cumpleaños 1">
         </div>
         <div class="carousel-item">
           <img src="https://scontent.fmvd2-2.fna.fbcdn.net/v/t1.6435-9/118933505_2726198024373993_3962559688399217289_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=3a1ebe&_nc_ohc=G8nlxSqC9o8Q7kNvwGAg5JN&_nc_oc=AdnGdHjiShGyWHf6kegty8KGuSbyzi9g1ZTbEwZodrSjgt4YM2cndPzvaSU9u4fjpcpcNLM5vnbbVeKry4daXB2j&_nc_zt=23&_nc_ht=scontent.fmvd2-2.fna&_nc_gid=HElF8I1xCoknxIQvdpgPGA&oh=00_AfHaUXQj5AdLfRONvgXXhQviCraExA-cgU_M7NPubpJUgw&oe=683AA2B7" class="d-block w-100 service-image" alt="Decoración de Cumpleaños 2">
         </div>
         <div class="carousel-item">
-          <img src="https://media.istockphoto.com/id/1482265626/es/foto/ni%C3%B1a-de-15-a%C3%B1os-ni%C3%B1a-hermosa-cumplea%C3%B1os.jpg?s=612x612&w=0&k=20&c=XrmHNY7HONqGaq0hnoC1AZ2jJQY1NgSdzuIVNlaakoQ=" class="d-block w-100 service-image" alt="Decoración de Cumpleaños 3">
+          <img src="https://hotelcottage.com.uy/images/eventos-cottage-cumple15-2019-salon-casona-8.jpg?crc=4102752296" class="d-block w-100 service-image" alt="Decoración de Cumpleaños 3">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#decoracionCarousel" data-bs-slide="prev">
